--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 description: >
-  Sample orb description
+  Download latest rcc for linux and display rcc version number
 # What will your orb allow users to accomplish?
 # Descriptions should be short, simple, and informative.
 
@@ -10,6 +10,16 @@ display:
   home_url: "https://www.website.com/docs"
   source_url: "https://www.github.com/EXAMPLE_ORG/EXAMPLE_PROJECT"
 
+
 # If your orb requires other orbs, you can import them like this. Otherwise remove the "orbs" stanza.
 # orbs:
 #  hello: circleci/hello-build@0.0.5
+
+steps:
+  - run:
+      name: install RCC
+      command: |
+          curl -o rcc https://downloads.robocorp.com/rcc/releases/latest/linux64/rcc
+          chmod a+x rcc
+          sudo mv rcc /usr/local/bin/
+          rcc version
